--- a/openweather/Cargo.toml
+++ b/openweather/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_repr = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json"] }
 
