--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rust-argon2 = "1.0"
 
 openweather = { path = "./openweather" }
 rand = "0.8.5"
+chrono-tz = "0.6.3"
 
 [features]
 default = ["sqlite"]
