--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ lazy_static = "1.4.0"
 rust-argon2 = "1.0"
 
 openweather-api = { path = "./openweather-api" }
+weather-gov = { path = "./weather-gov" }
 rand = "0.8.5"
 chrono-tz = "0.6.3"
 
